Cleanup pcc-mock
Eliminate duplicate version specification. Also cleanup Mockito usage
and builder layout.

Change-Id: I579d39f1a101884be5e83a3ebd247d5a9cb951ec
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>