@@ -7,18 +7,21 @@
  */
 package org.opendaylight.protocol.pcep.pcc.mock;
 
+import static org.junit.Assert.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.MockitoJUnitRunner;
 import org.opendaylight.protocol.pcep.PCEPSession;
 import org.opendaylight.protocol.pcep.pcc.mock.api.PCCSession;
 import org.opendaylight.protocol.pcep.pcc.mock.api.PCCTunnelManager;
@@ -52,138 +55,135 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.rsvp.rev
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.rsvp.rev150820.basic.explicit.route.subobjects.subobject.type.ip.prefix._case.IpPrefixBuilder;
 import org.opendaylight.yangtools.yang.common.Uint32;
 
+@RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class PCCSessionListenerTest {
+    private final List<Message> sendMessages = new ArrayList<>();
 
     @Mock
     private PCEPSession mockedSession;
-
     @Mock
     private PCCTunnelManager tunnelManager;
 
-    private final List<Message> sendMessages = new ArrayList<>();
-
     @Before
     public void setup() {
-        MockitoAnnotations.initMocks(this);
-        Mockito.doAnswer(invocation -> {
+        doAnswer(invocation -> {
             PCCSessionListenerTest.this.sendMessages.add((Message) invocation.getArguments()[0]);
             return null;
-        }).when(this.mockedSession).sendMessage(Mockito.any(Message.class));
+        }).when(mockedSession).sendMessage(any());
     }
 
     @After
     public void cleanup() {
-        this.sendMessages.clear();
+        sendMessages.clear();
     }
 
     @Test
     public void testOnMessage() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        listener.onMessage(this.mockedSession, createUpdMsg(true));
-        verify(this.tunnelManager).onMessagePcupd(Mockito.any(Updates.class), Mockito.any(PCCSession.class));
-        verify(this.tunnelManager, Mockito.never())
-            .onMessagePcInitiate(Mockito.any(Requests.class), Mockito.any(PCCSession.class));
-        listener.onMessage(this.mockedSession, createUpdMsg(false));
-        verify(this.tunnelManager, Mockito.times(2))
-            .onMessagePcupd(Mockito.any(Updates.class), Mockito.any(PCCSession.class));
-        verify(this.tunnelManager, Mockito.never())
-            .onMessagePcInitiate(Mockito.any(Requests.class), Mockito.any(PCCSession.class));
-        listener.onMessage(this.mockedSession, createInitMsg(false, true));
-        verify(this.tunnelManager, Mockito.times(2))
-            .onMessagePcupd(Mockito.any(Updates.class), Mockito.any(PCCSession.class));
-        verify(this.tunnelManager).onMessagePcInitiate(Mockito.any(Requests.class), Mockito.any(PCCSession.class));
-        listener.onMessage(this.mockedSession, createInitMsg(true, false));
-        verify(this.tunnelManager, Mockito.times(2))
-            .onMessagePcupd(Mockito.any(Updates.class), Mockito.any(PCCSession.class));
-        verify(this.tunnelManager, Mockito.times(2))
-            .onMessagePcInitiate(Mockito.any(Requests.class), Mockito.any(PCCSession.class));
-        listener.onMessage(this.mockedSession, createInitMsg(false, false));
-        verify(this.tunnelManager, Mockito.times(2))
-            .onMessagePcupd(Mockito.any(Updates.class), Mockito.any(PCCSession.class));
-        verify(this.tunnelManager, Mockito.times(3))
-            .onMessagePcInitiate(Mockito.any(Requests.class), Mockito.any(PCCSession.class));
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        listener.onMessage(mockedSession, createUpdMsg(true));
+        verify(tunnelManager).onMessagePcupd(any(Updates.class), any(PCCSession.class));
+        verify(tunnelManager, never()).onMessagePcInitiate(any(Requests.class), any(PCCSession.class));
+        listener.onMessage(mockedSession, createUpdMsg(false));
+        verify(tunnelManager, times(2)).onMessagePcupd(any(Updates.class), any(PCCSession.class));
+        verify(tunnelManager, never()).onMessagePcInitiate(any(Requests.class), any(PCCSession.class));
+        listener.onMessage(mockedSession, createInitMsg(false, true));
+        verify(tunnelManager, times(2)).onMessagePcupd(any(Updates.class), any(PCCSession.class));
+        verify(tunnelManager).onMessagePcInitiate(any(Requests.class), any(PCCSession.class));
+        listener.onMessage(mockedSession, createInitMsg(true, false));
+        verify(tunnelManager, times(2)).onMessagePcupd(any(Updates.class), any(PCCSession.class));
+        verify(tunnelManager, times(2)).onMessagePcInitiate(any(Requests.class), any(PCCSession.class));
+        listener.onMessage(mockedSession, createInitMsg(false, false));
+        verify(tunnelManager, times(2)).onMessagePcupd(any(Updates.class), any(PCCSession.class));
+        verify(tunnelManager, times(3)).onMessagePcInitiate(any(Requests.class), any(PCCSession.class));
     }
 
     @Test
     public void testOnMessageErrorMode() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, true);
-        listener.onMessage(this.mockedSession, createUpdMsg(true));
-        verify(this.mockedSession).sendMessage(Mockito.any(Message.class));
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, true);
+        listener.onMessage(mockedSession, createUpdMsg(true));
+        verify(mockedSession).sendMessage(any(Message.class));
     }
 
     @Test
     public void testOnSessionUp() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        listener.onSessionUp(this.mockedSession);
-        verify(this.tunnelManager).onSessionUp(Mockito.any(PCCSession.class));
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        listener.onSessionUp(mockedSession);
+        verify(tunnelManager).onSessionUp(any(PCCSession.class));
     }
 
     @Test
     public void testOnSessionDown() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        listener.onSessionDown(this.mockedSession, new Exception());
-        verify(this.tunnelManager).onSessionDown(Mockito.any(PCCSession.class));
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        listener.onSessionDown(mockedSession, new Exception());
+        verify(tunnelManager).onSessionDown(any(PCCSession.class));
     }
 
     @Test
     public void testSendError() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        listener.onSessionUp(this.mockedSession);
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        listener.onSessionUp(mockedSession);
         listener.sendError(MsgBuilderUtil.createErrorMsg(PCEPErrors.ATTEMPT_2ND_SESSION, Uint32.ZERO));
-        verify(this.mockedSession).sendMessage(Mockito.any());
+        verify(mockedSession).sendMessage(any());
     }
 
     @Test
     public void testSendReport() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        listener.onSessionUp(this.mockedSession);
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        listener.onSessionUp(mockedSession);
         listener.sendReport(null);
-        verify(this.mockedSession).sendMessage(Mockito.any());
+        verify(mockedSession).sendMessage(any());
     }
 
     @Test
     public void testGetId() {
-        final PCCSessionListener listener = new PCCSessionListener(1, this.tunnelManager, false);
-        Assert.assertEquals(1, listener.getId());
+        final PCCSessionListener listener = new PCCSessionListener(1, tunnelManager, false);
+        assertEquals(1, listener.getId());
     }
 
     private static PcinitiateMessage createInitMsg(final boolean remove, final boolean endpoint) {
-        // lsp with "unknown" plsp-id
-        final LspBuilder lspBuilder = new LspBuilder()
-            .setAdministrative(true)
-            .setDelegate(true)
-            .setIgnore(false)
-            .setOperational(OperationalStatus.Up)
-            .setPlspId(new PlspId(Uint32.valueOf(999)))
-            .setProcessingRule(false)
-            .setRemove(remove)
-            .setSync(true);
-
-        final List<Requests> requests = new ArrayList<>();
         final RequestsBuilder reqBuilder = new RequestsBuilder()
-            .setLsp(lspBuilder.build())
-            .setSrp(new SrpBuilder(MsgBuilderUtil.createSrp(Uint32.valueOf(123))).addAugmentation(
-                new Srp1Builder().setRemove(remove).build()).build());
+            // lsp with "unknown" plsp-id
+            .setLsp(new LspBuilder()
+                .setAdministrative(true)
+                .setDelegate(true)
+                .setIgnore(false)
+                .setOperational(OperationalStatus.Up)
+                .setPlspId(new PlspId(Uint32.valueOf(999)))
+                .setProcessingRule(false)
+                .setRemove(remove)
+                .setSync(true)
+                .build())
+            .setSrp(new SrpBuilder(MsgBuilderUtil.createSrp(Uint32.valueOf(123)))
+                .addAugmentation(new Srp1Builder().setRemove(remove).build())
+                .build());
         if (endpoint) {
             reqBuilder.setEndpointsObj(new EndpointsObjBuilder().build());
         }
-        requests.add(reqBuilder.build());
 
-        final PcinitiateMessageBuilder initBuilder = new PcinitiateMessageBuilder().setRequests(requests);
-        return new PcinitiateBuilder().setPcinitiateMessage(initBuilder.build()).build();
+        return new PcinitiateBuilder()
+            .setPcinitiateMessage(new PcinitiateMessageBuilder().setRequests(List.of(reqBuilder.build())).build())
+            .build();
     }
 
     private static Pcupd createUpdMsg(final boolean delegation) {
-        final PcupdMessageBuilder msgBuilder = new PcupdMessageBuilder();
-        final UpdatesBuilder updsBuilder = new UpdatesBuilder();
-        updsBuilder.setLsp(new LspBuilder().setDelegate(delegation).setPlspId(new PlspId(Uint32.ONE)).build());
-        final PathBuilder pathBuilder = new PathBuilder();
-        pathBuilder.setEro(new EroBuilder().setSubobject(Collections.singletonList(new SubobjectBuilder()
-            .setSubobjectType(new IpPrefixCaseBuilder().setIpPrefix(new IpPrefixBuilder()
-                .setIpPrefix(new IpPrefix(new Ipv4Prefix("127.0.0.2/32"))).build()).build()).build())).build());
-        updsBuilder.setPath(pathBuilder.build());
-        updsBuilder.setSrp(new SrpBuilder().setOperationId(new SrpIdNumber(Uint32.ZERO)).build());
-        msgBuilder.setUpdates(Collections.singletonList(updsBuilder.build()));
-        return new PcupdBuilder().setPcupdMessage(msgBuilder.build()).build();
+        return new PcupdBuilder()
+            .setPcupdMessage(new PcupdMessageBuilder()
+                .setUpdates(List.of(new UpdatesBuilder()
+                    .setLsp(new LspBuilder().setDelegate(delegation).setPlspId(new PlspId(Uint32.ONE)).build())
+                    .setPath(new PathBuilder()
+                        .setEro(new EroBuilder()
+                            .setSubobject(List.of(new SubobjectBuilder()
+                                .setSubobjectType(new IpPrefixCaseBuilder()
+                                    .setIpPrefix(new IpPrefixBuilder()
+                                        .setIpPrefix(new IpPrefix(new Ipv4Prefix("127.0.0.2/32")))
+                                        .build())
+                                    .build())
+                                .build()))
+                            .build())
+                        .build())
+                    .setSrp(new SrpBuilder().setOperationId(new SrpIdNumber(Uint32.ZERO)).build())
+                    .build()))
+                .build())
+            .build();
     }
 }
